<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background">

    <FrameLayout
        android:id="@+id/headerGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_top_margin"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardTitleGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone">

            <FrameLayout
                android:id="@+id/previousButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="@id/previousButtonIcon"
                app:layout_constraintEnd_toEndOf="@id/previousButtonIcon"
                app:layout_constraintStart_toStartOf="@id/previousButtonIcon"
                app:layout_constraintTop_toTopOf="@id/previousButtonIcon" />

            <ImageView
                android:id="@+id/previousButtonIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_previous_button" />

            <FrameLayout
                android:id="@+id/titleClickableArea"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/cardTitle"
                app:layout_constraintStart_toStartOf="@id/cardTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textColor="@color/page_title_3"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/nextButton"
                app:layout_constraintStart_toEndOf="@id/previousButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Hello World!" />

            <FrameLayout
                android:id="@+id/nextButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="@id/nextButtonIcon"
                app:layout_constraintEnd_toEndOf="@id/nextButtonIcon"
                app:layout_constraintStart_toStartOf="@id/nextButtonIcon"
                app:layout_constraintTop_toTopOf="@id/nextButtonIcon" />

            <ImageView
                android:id="@+id/nextButtonIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_next_button" />

            <ImageView
                android:id="@+id/nextCardButton"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_next_card_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timerGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/exitFromTimerButton"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_timeline_timer_exit" />

            <FrameLayout
                android:id="@+id/exitFromTimerButtonClickableArea"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="@id/exitFromTimerButton"
                app:layout_constraintEnd_toEndOf="@id/exitFromTimerButton"
                app:layout_constraintStart_toStartOf="@id/exitFromTimerButton"
                app:layout_constraintTop_toTopOf="@id/exitFromTimerButton" />

            <LinearLayout
                android:id="@+id/timerGroupTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/ic_timer_mode_title" />

                <TextView
                    android:id="@+id/timerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:textColor="@color/page_title_3"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2h 30m" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <com.github.captain_miao.optroundcardview.OptRoundCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/card_background"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerGroup"
        app:optRoundCardBottomEdges="false"
        app:optRoundCardCornerRadius="@dimen/card_radius"
        app:optRoundCardElevation="12dp"
        app:optRoundCardLeftBottomCorner="false"
        app:optRoundCardRightBottomCorner="false"
        tools:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:itemCount="6"
            tools:listitem="@layout/item_timeline_event" />

        <LinearLayout
            android:id="@+id/timelineFirstEventView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/ic_empty_events" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/timeline_empty_events"
                android:textAlignment="center"
                android:textColor="@color/card_content"
                android:textSize="16sp" />

            <Button
                android:id="@+id/createFirstEventButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/timeline_button_create_first_event" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/createEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="24dp"
            app:backgroundTint="@color/button1_background"
            app:srcCompat="@drawable/ic_create_event"
            app:tint="@null" />

    </com.github.captain_miao.optroundcardview.OptRoundCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/timelineLoadingView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/page_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/timelineFirstCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/page_background"
        app:cardCornerRadius="0dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name_with_hash_tag"
            android:textColor="@color/page_title_1"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/ic_empty_cards" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/timeline_empty_cards"
                android:textAlignment="center"
                android:textColor="@color/page_content"
                android:textSize="16sp" />

            <Button
                android:id="@+id/createFirstCardButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/timeline_button_create_first_card" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>